--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .main {
-  background-color: rgb(224, 221, 219);
+  background-color: #fefefe;
   padding: 2rem 0;
   min-height: 100vh;
 }
@@ -16,5 +16,20 @@
   max-width: 90%;
   width: 1170px;
   margin: 0 auto;
-  background-color: cadetblue;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: rgb(209, 219, 219);
+}
+
+.logout-btn {
+  padding: 1rem;
+  background-color: blanchedalmond;
+  margin-left: auto;
+  opacity: .7;
+  transition: all .4s;
+}
+
+.logout-btn:hover {
+  /* background-color: rgb(214, 208, 198); */
+  opacity: 1;
 }
