--- a/src/contacts/contacts.css
+++ b/src/contacts/contacts.css
@@ -1,4 +1,122 @@
 ul {
   list-style: none;
 }
+
+button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: none;
+  border-radius: 5px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.contacts {
+  padding: 1rem;
+}
+
+.contacts__header {
+  font-weight: 500;
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.contacts__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contacts__list {
+  margin-top: 1rem;
+}
+
+.contacts__filter {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 2rem;
+  position: relative;
+}
+
+.contacts__filter__icon {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 1rem;
+}
+
+.contacts__filter .text__input {
+  padding-left: 3rem;
+}
+
+.contacts__add-btn {
+  min-width: 30px;
+  padding: 0 .5rem;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.contacts__add-btn:hover {
+  background-color: #ffae00;
+}
+
+.contacts__item {
+  padding: 1rem;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: auto 1fr 1fr auto auto;
+      grid-template-columns: auto 1fr 1fr auto auto;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+}
+
+.contacts__item:hover {
+  background-color: #bbc9ca;
+}
+
+.contacts__item .text__input {
+  border: none;
+}
+
+.contacts__item__edit-btn, .contacts__item__delete-btn {
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+  width: 30px;
+}
+
+.contacts__item__edit-btn {
+  color: #b66f12;
+}
+
+.contacts__item__edit-btn:hover {
+  color: #e79f41;
+}
+
+.contacts__item__delete-btn {
+  color: #911818;
+}
+
+.contacts__item__delete-btn:hover {
+  color: #c75d5d;
+}
 /*# sourceMappingURL=contacts.css.map */
