--- a/src/contacts/contacts.scss
+++ b/src/contacts/contacts.scss
@@ -1,3 +1,101 @@
 ul {
     list-style: none;
 }
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 5px;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.contacts {
+    padding: 1rem;
+
+    &__header {
+        font-weight: 500;
+        font-size: 1.5rem;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+    
+    &__top {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__list {
+        margin-top: 1rem;
+    }
+
+    &__filter {
+        flex: 1;
+        margin-right: 2rem;
+        position: relative;
+        // width: 500px;
+
+        &__icon {
+            position: absolute;
+            z-index: 1;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 1rem;
+        }
+
+        & .text__input {
+            padding-left: 3rem;
+        }
+    }
+    
+    &__add-btn {
+        min-width: 30px;
+        padding: 0 .5rem;
+        transition: all .3s;
+
+        &:hover {
+            background-color: rgb(255, 174, 0);
+        }
+    }
+
+    &__item {
+        padding: 1rem;
+        display: grid;
+        align-items: center;
+        // grid-template-columns: repeat(12, 1fr);
+        grid-template-columns: auto 1fr 1fr auto auto;
+        column-gap: 1rem;
+        &:hover {
+            background-color: rgb(187, 201, 202);
+        }
+
+        & .text__input {
+            border: none;
+        }
+
+
+        &__edit-btn,
+        &__delete-btn {
+            align-self: stretch;
+            width: 30px;
+        }
+
+        &__edit-btn {
+            color: rgb(182, 111, 18);
+            &:hover {
+                color: rgb(231, 159, 65);
+            }
+        }
+
+        &__delete-btn {
+            color: rgb(145, 24, 24);
+            &:hover {
+                color: rgb(199, 93, 93);
+            }
+        }
+
+    }
+}
