--- a/src/login/login.css
+++ b/src/login/login.css
@@ -1,7 +1,3 @@
-/* primary/main color */
-/* lighter shades of primary color */
-/* darkest grey - used for headings */
-/* grey used for paragraphs */
 .login {
   margin-bottom: 2rem;
 }
@@ -16,7 +12,7 @@
 }
 
 .login__logo__yellow {
-  color: #FFC45B;
+  color: #ff9100;
 }
 
 .login__center {
@@ -59,5 +55,13 @@
   width: 360px;
   height: 50px;
   margin: 10px auto 0;
+}
+
+.login .text {
+  height: 46px;
+}
+
+.login .text .text__input {
+  padding: 14px;
 }
 /*# sourceMappingURL=login.css.map */
