--- a/src/login/login.scss
+++ b/src/login/login.scss
@@ -1,5 +1,3 @@
-@import '../../utils/styles/constants/constants';
-@import '../../utils/styles/mixins/mixinS';
 
 .login {
     margin-bottom: 2rem;
@@ -13,7 +11,7 @@
         margin: 4rem auto;
 
         &__yellow {
-            color: $yellow-color;
+            color: rgb(255, 145, 0);
         }
     }
 
@@ -54,5 +52,12 @@
             margin: 10px auto 0;
         }
 
+    }
+
+    & .text {
+        height: 46px;
+        & .text__input {
+            padding: 14px;
+        }
     }
 }
